--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.0",
     "postcss": "8.4.35",
+    "postcss-import": "16.0.0",
+    "postcss-preset-env": "9.3.0",
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "0.5.11",
     "tailwindcss": "3.4.1",
