--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "rm -rf .next node_modules"
   },
   "dependencies": {
     "@radix-ui/react-slot": "1.0.2",
@@ -17,7 +18,7 @@
     "@radix-ui/react-select": "2.0.0",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
-    "next": "14.1.0",
+    "next": "14.2.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "2.2.1",
@@ -29,13 +30,12 @@
     "@types/react-dom": "18.2.19",
     "autoprefixer": "10.4.18",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "14.2.27",
     "postcss": "8.4.35",
-    "postcss-import": "16.0.0",
-    "postcss-preset-env": "9.3.0",
-    "prettier": "3.2.5",
-    "prettier-plugin-tailwindcss": "0.5.11",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
+  },
+  "engines": {
+    "node": ">=20.11.1"
   }
 }
