--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.27",
     "postcss": "8.4.35",
+    "postcss-import": "16.0.0",
+    "postcss-preset-env": "9.3.0",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
   },
