--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
+    "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
-    "@prisma/client": "^5.10.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -62,7 +60,6 @@
     "postcss": "^8.4.35",
     "postcss-import": "^16.0.0",
     "postcss-preset-env": "^9.3.0",
-    "prisma": "^5.10.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
