--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,6 @@
 engine-strict=true
-strict-peer-dependencies=true
+legacy-peer-deps=false
 auto-install-peers=true
-node-linker=hoisted 
+node-linker=hoisted
+strict-peer-dependencies=true
+resolution-mode=highest 
