--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/react-dom": "^18.2.19",
     "@vercel/otel": "^1.10.4",
     "autoprefixer": "^10.4.18",
+    "critters": "^0.0.23",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.27",
     "postcss": "^8.4.35",
