--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^12.6.3",
     "lucide-react": "^0.330.0",
     "next": "14.2.27",
     "next-themes": "^0.2.1",
