--- a/package.json
+++ b/package.json
@@ -20,18 +20,21 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@t3-oss/env-nextjs": "^0.13.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.330.0",
-    "next": "14.2.27",
+    "next": "^14.2.33",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@storybook/addon-essentials": "^8.6.12",
     "@storybook/addon-interactions": "^8.6.12",
     "@storybook/addon-links": "^8.6.12",
@@ -45,12 +48,14 @@
     "autoprefixer": "^10.4.21",
     "critters": "^0.0.23",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.27",
+    "eslint-config-next": "^14.2.33",
+    "eslint-plugin-storybook": "^0.11.5",
     "postcss": "^8.4.35",
     "postcss-import": "^16.0.0",
     "postcss-preset-env": "^9.3.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "typescript-eslint": "^8.48.0"
   },
   "engines": {
     "node": ">=20.11.1"
